@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-10T08:07:31Z",
-  "count_outdated" : 1714,
-  "uniques_outdated" : 502,
-  "count" : 1747,
+  "timestamp" : "2022-08-10T16:06:43Z",
+  "count_outdated" : 1716,
+  "uniques_outdated" : 503,
+  "count" : 1748,
   "uniques" : 520,
   "clones" : [
-    {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-28T00:00:00Z",
       "count": 3,
